--- a/app/ui/dotted-menu/dotted-menu.module.css
+++ b/app/ui/dotted-menu/dotted-menu.module.css
@@ -5,5 +5,5 @@
 }
 
 .dottedMenu {
-  @apply cursor-pointer px-2 h-8 items-center outline-0;
+  @apply cursor-pointer px-1 h-8 items-center outline-0;
 }
